--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -5,15 +5,17 @@
   <title>회원가입</title>
   <style>
       /* CSS 스타일을 작성합니다. */
-    </style>
+  </style>
 </head>
 <body>
 <form method="POST" action="">
-  <label for="username">아이디:</label>
+  <label for="username">아이디 :</label>
   <input type="text" id="username" name="username" required><br><br>
-  <label for="password">비밀번호:</label>
+  <label for="password">비밀번호 :</label>
   <input type="password" id="password" name="password" required><br><br>
-  <label for="email">이메일:</label>
+  <label for="password">비밀번호 확인 :</label>
+  <input type="password" id="passwordCk" name="passwordCk" required><br><br>
+  <label for="email">이메일 :</label>
   <input type="email" id="email" name="email" required><br><br>
   <input type="submit" value="회원가입">
 </form>
