230328 JDBC Template 연결 완료

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -43,7 +43,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>번호</th>
+                    <!-- <th>번호</th> -->
                     <th>제목</th>
                     <th>글쓴이</th>
                     <th>글 쓴 시각</th>
@@ -53,7 +53,7 @@
             <tbody>
                 <tr class="contents-tr" th:each="post, i : ${list}" th:onclick="'location.href=\'/view/'+${post.idx}+'\''">
 <!--                    <td th:text="${post.idx}"></td>-->
-                    <td th:text="${i.count}"></td> <!-- 순서 거꾸로 해야함.-->
+                    <!-- <td th:text="${i.count}"></td> --><!-- 순서 거꾸로 해야함.-->
                     <td th:text="${post.title}"></td>
                     <td th:text="${post.writer}"></td>
                     <td th:text="${post.time}"></td>
