--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,23 +1,41 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>회원가입</title>
-  <style>
-      /* CSS 스타일을 작성합니다. */
-  </style>
-</head>
-<body>
-<form method="POST" action="">
-  <label for="username">아이디 :</label>
-  <input type="text" id="username" name="username" required><br><br>
-  <label for="password">비밀번호 :</label>
-  <input type="password" id="password" name="password" required><br><br>
-  <label for="password">비밀번호 확인 :</label>
-  <input type="password" id="passwordCk" name="passwordCk" required><br><br>
-  <label for="email">이메일 :</label>
-  <input type="email" id="email" name="email" required><br><br>
-  <input type="submit" value="회원가입">
-</form>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--<head>-->
+<!--  <meta charset="UTF-8">-->
+<!--  <title>회원가입</title>-->
+<!--  <style>-->
+<!--      /* CSS 스타일을 작성합니다. */-->
+<!--  </style>-->
+<!--</head>-->
+<!--<body>-->
+<!--<form method="POST" action="">-->
+<!--  <label for="username">아이디 :</label>-->
+<!--  <input type="text" id="username" name="username" required><br><br>-->
+<!--  <label for="password">비밀번호 :</label>-->
+<!--  <input type="password" id="password" name="password" required><br><br>-->
+<!--  <label for="password">비밀번호 확인 :</label>-->
+<!--  <input type="password" id="passwordCk" name="passwordCk" required><br><br>-->
+<!--  <label for="email">이메일 :</label>-->
+<!--  <input type="email" id="email" name="email" required><br><br>-->
+<!--  <input type="submit" value="회원가입">-->
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="ko" xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--  <meta charset="UTF-8">-->
+<!--  <title>회원가입</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>회원가입</h1>-->
+<!--<form method="post" th:object="${user}" th:action="@{/user/register}">-->
+<!--  <p>Username: <input type="text" th:field="*{username}" /></p>-->
+<!--  <p>Password: <input type="password" th:field="*{password}" /></p>-->
+<!--  <p>Confirm Password: <input type="password" th:field="*{confirmPassword}" /></p>-->
+<!--  <p>Email: <input type="text" th:field="*{email}" /></p>-->
+<!--  <p><input type="submit" value="Register" /></p>-->
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
