--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -5,35 +5,35 @@
     <title>회원가입</title>
 </head>
 <body>
-<h1>Signup</h1>
+<!--<h1>Signup</h1>-->
 
-<form th:action="@{/signup}" method="post">
-    <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" th:value="${userEntity.email}" required autofocus>
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" th:value="${userEntity.password}" required>
-    </div>
-    <div>
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" th:value="${userEntity.username}" required>
-    </div>
-    <div>
-        <button type="submit">Signup</button>
-    </div>
-</form>
+<!--<form th:action="@{/signup}" method="post">-->
+<!--    <div>-->
+<!--        <label for="email">Email</label>-->
+<!--        <input type="email" id="email" name="email" th:value="${MemberEntity.email}" required autofocus>-->
+<!--    </div>-->
+<!--    <div>-->
+<!--        <label for="password">Password</label>-->
+<!--        <input type="password" id="password" name="password" th:value="${MemberEntity.password}" required>-->
+<!--    </div>-->
+<!--    <div>-->
+<!--        <label for="username">Username</label>-->
+<!--        <input type="text" id="username" name="username" th:value="${MemberEntity.username}" required>-->
+<!--    </div>-->
+<!--    <div>-->
+<!--        <button type="submit">Signup</button>-->
+<!--    </div>-->
+<!--</form>-->
 
 <h1>회원가입</h1>
 <hr>
 <form action="/signup" th:object="${member}" method="post">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
-    <input type="email" th:field="*{email}" placeholder="아이디입력">
+    <input type="email" th:field="*{email}" placeholder="이메일">
     <input type="password" th:field="*{password}" placeholder="비밀번호">
     <input type="text" th:field="*{username}" placeholder="이름">
-    <button type="submit">로그인</button>
+    <button type="submit">회원가입</button>
 </form>
 </body>
 </html>
