--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -16,9 +16,7 @@
         <h1>hcy©2023 noticeboard project</h1>
         <nav>
             <ul>
-                <li><a href="https://github.com/hanchaeyoung/noticeboard" target="_blank">github</a></li>
-<!--                <li><a href="https://tame-apartment-e64.notion.site/PORTFOLIO-c09ef451f7724894bce311690896cba2"-->
-<!--                       target="_blank">notion</a></li>-->
+<!--                <li><a href="https://github.com/hanchaeyoung/noticeboard" target="_blank">github</a></li>-->
             </ul>
         </nav>
     </footer>
