--- a/src/main/resources/templates/user/add-save.html
+++ b/src/main/resources/templates/user/add-save.html
@@ -7,8 +7,11 @@
 <body>
 <!-- HEADER -->
 <div th:insert="common/header.html" id="header"></div>
-<h1>회원가입 완료</h1>
-<p>회원 가입이 완료되었습니다.</p>
-<p><a href="/login">로그인</a></p>
+
+<div style="height: 100px"></div>
+<div style="text-align: center;">
+  <h2>회원 가입이 완료되었습니다.</h2><br>
+  <p><a href="/login">로그인</a></p>
+</div>
 </body>
 </html>
