--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -17,7 +17,7 @@
         <form action="/board/search" method="GET">
             <div>
                 <input class="form-control" aria-describedby="helpBlock" name="keyword" type="text" placeholder="검색어를 입력해주세요">
-                <button class="btn btn-default">검색하기</button>
+                <button class="btn btn-default" style="border: 1px solid black">검색하기</button>
             </div>
         </form>
         <br>
