--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -13,12 +13,12 @@
 <body>
 
     <footer>
-        <h1>hcy©2023 noticeboard project</h1>
-        <nav>
-            <ul>
+        <h1>© 2023. hcy. All right reserved</h1>
+<!--        <nav>-->
+<!--            <ul>-->
 <!--                <li><a href="https://github.com/hanchaeyoung/noticeboard" target="_blank">github</a></li>-->
-            </ul>
-        </nav>
+<!--            </ul>-->
+<!--        </nav>-->
     </footer>
 </body>
 
