--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -54,7 +54,7 @@
         }
 
         header {
-            height: 60px;
+            height: 70px;
             background-color: black;
 
         }
@@ -92,15 +92,13 @@
 
         footer {
             text-align: center;
-            background-color: #e9eaed;
-            height: 60px;
+            height: 50px;
 
         }
 
         footer h1 {
-            font-family: 'TheJamsil5Bold';
             font-size: 1rem;
-            color: #c5c5c5;
+            color: black;
         }
         footer nav{
             padding: 10px;
