--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -30,13 +30,13 @@
             <input name="name" type="text" class="form-control" id="exampleInputName2" placeholder="이름을 입력하세요">
         </div>
         <br>
-        <div class="form-group">
-            <label>등급</label>
-            <select class="form-control" name="grade">
-                <option value="1">일반사용자</option>
-                <option value="9">최고관리자</option>
-            </select>
-        </div>
+<!--        <div class="form-group">-->
+<!--            <label>등급</label>-->
+<!--            <select class="form-control" name="grade">-->
+<!--                <option value="1">일반사용자</option>-->
+<!--                <option value="9">최고관리자</option>-->
+<!--            </select>-->
+<!--        </div>-->
         <br><br>
         <button type="submit" style="border-radius: 5px; background-color: black; color: white; width: 100%; height: 40px">회원가입</button>
     </form>
