--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -13,7 +13,7 @@
 <body>
 
     <footer>
-        <h1>© 2023. hcy. All right reserved</h1>
+<!--        <h1>© 2023. hcy. All right reserved</h1>-->
 <!--        <nav>-->
 <!--            <ul>-->
 <!--                <li><a href="https://github.com/hanchaeyoung/noticeboard" target="_blank">github</a></li>-->
