--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -31,7 +31,7 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th class="one wide">번호</th>
+<!--                    <th class="one wide">번호</th>-->
                     <th class="ten wide">글제목</th>
                     <th class="two wide">작성자</th>
                     <th class="three wide">작성일</th>
@@ -41,9 +41,9 @@
                 <tbody>
                 <!-- CONTENTS !-->
                 <tr th:each="board : ${boardList}">
-                    <td>
-                        <span th:text="${board.id}"></span>
-                    </td>
+<!--                    <td>-->
+<!--                        <span th:text="${board.id}"></span>-->
+<!--                    </td>-->
                     <td>
                         <a th:href="@{'/post/' + ${board.id}}">
                             <span th:text="${board.title}"></span>
