--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
+    <script src="/bootstrap-5.3.0-alpha3-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
 <!-- HEADER -->
