--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -10,23 +10,12 @@
 <!-- HEADER -->
 <div th:insert="common/header.html" id="header"></div>
 
-<div class="container" style="width: 30%">
-  <br><br>
-  <h2 style="text-align: center">로그인</h2>
-  <br>
-  <form th:action="@{/}" method="post">
-    <div class="form-group">
-      <label for="exampleInputEmail1">이메일</label>
-      <input name="email" type="email" class="form-control" id="exampleInputEmail1" placeholder="이메일을 입력하세요">
-    </div>
-    <br>
-    <div class="form-group">
-      <label for="exampleInputPassword1">비밀번호</label>
-      <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="비밀번호를 입력하세요">
-    </div>
-    <br>
-    <br><br>
-    <button type="submit" style="border-radius: 5px; background-color: black; color: white; width: 100%; height: 40px">로그인</button>
+<div>
+  <form action="/login" method="post">
+    아이디 : <input type="text" name="name"> <br>
+    비밀번호 : <input type="password" name="password"><br>
+
+    <input type="submit" value="로그인">
   </form>
 </div>
 </body>
