--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -12,11 +12,12 @@
 
 <h2 th:text="${boardDto.title}"></h2>
 <p th:inline="text">작성일 : [[${#temporals.format(boardDto.createdDate, 'yyyy-MM-dd HH:mm')}]]</p>
+<p th:text="${boardDto.writer}"></p>
 
 <p th:text="${boardDto.content}"></p>
 
 <!-- 수정/삭제 -->
-<div>
+<div th:if="${boardDto.writer == #authentication.principal.user.email}">
     <a th:href="@{'/post/edit/' + ${boardDto.id}}">
         <button>수정</button>
     </a>
