--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -16,18 +16,18 @@
     <br>
     <form th:action="@{/user/add-save}" method="get">
         <div class="form-group">
-            <label for="exampleInputEmail1">이메일</label>
-            <input name="email" type="email" class="form-control" id="exampleInputEmail1" placeholder="이메일을 입력하세요">
+            <label for="exampleInputId">아이디</label>
+            <input name="id" type="text" class="form-control" id="exampleInputId" placeholder="아이디를 입력하세요">
         </div>
         <br>
         <div class="form-group">
-            <label for="exampleInputPassword1">비밀번호</label>
-            <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="비밀번호를 입력하세요">
+            <label for="exampleInputPassword">비밀번호</label>
+            <input name="password" type="password" class="form-control" id="exampleInputPassword" placeholder="비밀번호를 입력하세요">
         </div>
         <br>
         <div class="form-group">
-            <label for="exampleInputName2">이름</label>
-            <input name="name" type="text" class="form-control" id="exampleInputName2" placeholder="이름을 입력하세요">
+            <label for="exampleInputName">이름</label>
+            <input name="name" type="text" class="form-control" id="exampleInputName" placeholder="이름을 입력하세요">
         </div>
         <br>
 <!--        <div class="form-group">-->
