--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -11,13 +11,12 @@
 <div th:insert="common/header.html" id="header"></div>
 
 <h2 th:text="${boardDto.title}"></h2>
-<p th:inline="text">작성일 : [[${#temporals.format(boardDto.createdDate, 'yyyy-MM-dd HH:mm')}]]</p>
-<p th:text="${boardDto.writer}"></p>
-
-<p th:text="${boardDto.content}"></p>
+<span th:inline="text">작성일 : [[${#temporals.format(boardDto.createdDate, 'yyyy-MM-dd HH:mm')}]]</span>
+작성자 : <span th:text="${boardDto.writer}"></span>
+<span th:text="${boardDto.content}"></span>
 
 <!-- 수정/삭제 -->
-<div th:if="${boardDto.writer == #authentication.principal.user.email}">
+<div th:if="${boardDto.writer == #authentication.principal.user.id}">
     <a th:href="@{'/post/edit/' + ${boardDto.id}}">
         <button>수정</button>
     </a>
