--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -12,7 +12,7 @@
 
 <div>
   <form action="/login" method="post">
-    아이디 : <input type="text" name="name"> <br>
+    아이디 : <input type="text" name="id"> <br>
     비밀번호 : <input type="password" name="password"><br>
 
     <input type="submit" value="로그인">
