--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -13,7 +13,7 @@
 
 <div id="wrap" class="container" style="width: 60%">
   <div style="margin: 60px"></div>
-  <sapn th:text="${#authentication.principal.user.name}"></sapn>님 안녕하세요
+  <sapn th:text="${#authentication.principal.user.id}"></sapn>님 안녕하세요
   </div>
 </div>
 
