--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -17,7 +17,7 @@
     <form th:action="@{/user/add-save}" method="get">
         <div class="form-group">
             <label for="exampleInputId">아이디</label>
-            <input name="id" type="text" class="form-control" id="exampleInputId" placeholder="아이디를 입력하세요">
+            <input name="id" type="text" class="form-control" id="exampleInputId" placeholder="아이디를 입력하세요" maxlength="95">
         </div>
         <br>
         <div class="form-group">
