230613 - 댓글 기능 추가

--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -10,15 +10,19 @@
 <!-- HEADER -->
 <div th:insert="common/header.html" id="header"></div>
 
-<form th:action="@{'/post/edit/' + ${boardDto.id}}" method="post">
-    <input type="hidden" name="_method" value="put"/>
-    <input type="hidden" name="id" th:value="${boardDto.id}"/>
+<div class="container">
+    <div style="margin: 100px">
+        <form th:action="@{'/post/edit/' + ${boardDto.id}}" method="post">
+            <input type="hidden" name="_method" value="put"/>
+            <input type="hidden" name="id" th:value="${boardDto.id}"/>
 
-    제목 : <input type="text" name="title" th:value="${boardDto.title}" maxlength="95"> <br>
-    작성자 : <input type="text" name="writer" th:value="${boardDto.writer}" readonly> <br>
-    <textarea name="content" th:text="${boardDto.content}"></textarea><br>
+            <input type="text" name="title" th:value="${boardDto.title}" maxlength="95" class="form-control"> <br>
+            <input type="text" name="writer" th:value="${boardDto.writer}" readonly class="form-control"> <br>
+            <textarea name="content" th:text="${boardDto.content}" class="form-control"></textarea><br>
 
-    <input type="submit" value="수정">
-</form>
+            <input type="submit" value="수정" class="btn btn-default" style="background-color: black; color: white;">
+        </form>
+    </div>
+</div>
 </body>
 </html>
