--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -14,11 +14,11 @@
 <div class="container">
     <div style="margin: 100px">
         <form action="/post" method="post">
-            제목 : <input type="text" name="title" maxlength="95"> <br>
-            작성자 : <input type="text" name="writer" th:value="${#authentication.principal.user.id}" readonly><br>
-            <textarea name="content"></textarea><br>
+            <input type="text" name="title" maxlength="95" class="form-control" placeholder="제목을 입력하세요."> <br>
+            <input type="text" name="writer" th:value="${#authentication.principal.user.id}" readonly class="form-control"><br>
+            <textarea name="content" maxlength="65000" style="height: 500px" class="form-control" placeholder="내용을 입력하세요."></textarea><br>
 
-            <input type="submit" value="등록">
+            <input type="submit" value="등록" class="btn btn-default" style="background-color: black; color: white;">
         </form>
     </div>
 </div>
