--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -45,18 +45,53 @@
         </div>
     </table>
 
-    <!-- 수정/삭제 -->
-<!--    <div th:if="${boardDto.writer == #authentication.principal.user.id}">-->
-<!--        <a th:href="@{'/post/edit/' + ${boardDto.id}}">-->
-<!--            <button class="btn btn-default" style="background-color: black; color: white;">수정</button>-->
-<!--        </a>-->
+    <form th:action="@{'/post/' + ${boardDto.id}}" method="post">
+        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}">
 
-<!--        <form id="delete-form" th:action="@{'/post/' + ${boardDto.id}}" method="post">-->
-<!--            <input type="hidden" name="_method" value="delete"/>-->
-<!--            <button id="delete-btn" class="btn btn-default" style="background-color: black; color: white;">삭제</button>-->
-<!--        </form>-->
-<!--    </div>-->
+        <div class="form-group">
+            <input type="text" class="form-control" id="writer" name="writer" th:value="${#authentication.principal.user.id}" readonly>
+        </div>
+
+        <div class="form-group">
+            <textarea class="form-control" id="content" name="content" rows="3" placeholder="댓글을 작성해주세요." maxlength="990"></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">댓글 작성</button>
+    </form>
+
+    <h3>댓글 목록</h3>
+    <table>
+        <tr th:each="comment : ${boardDto.comments}">
+            <td th:text="${comment.writer}"></td>
+            <td th:text="${comment.content}" id="comment-input"></td>
+            <td th:if="${comment.writer == #authentication.principal.user.id}">
+                <form th:action="@{'/post/' + ${boardDto.id} + '/' + ${comment.id}}" method="post">
+                    <input type="hidden" name="_method" value="delete"/>
+                    <button class="btn btn-default" style="background-color: black; color: white;">삭제</button>
+                </form>
+            </td>
+        </tr>
+    </table>
 </div>
+
+<script>
+<!--document.getElementById('delete-btn').addEventListener('click', function() {-->
+<!--    deleteComment(/*commentId를 전달*/);-->
+<!--});-->
+
+<!--function deleteComment(commentId) {-->
+<!--    var boardNo = /*게시글 번호를 가져오는 코드*/;-->
+<!--    fetch('/post/' + boardNo + '/' + commentId, {-->
+<!--        method: 'DELETE'-->
+<!--    }).then(function(response) {-->
+<!--        if (response.ok) {-->
+<!--            // 삭제 성공 시 동작할 코드-->
+<!--        } else {-->
+<!--            // 삭제 실패 시 동작할 코드-->
+<!--        }-->
+<!--    });-->
+<!--}-->
+</script>
 
 <!-- 변수 셋팅 -->
 <script th:inline="javascript">
