--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -31,19 +31,19 @@
             <table class="table" style="text-align: center">
                 <thead>
                 <tr>
-<!--                    <th class="one wide">번호</th>-->
-                    <th class="ten wide">글제목</th>
-                    <th class="two wide">작성자</th>
-                    <th class="three wide">작성일</th>
+                    <!--                    <th class="one wide">번호</th>-->
+                    <th class="ten wide" style="width: 75%">글제목</th>
+                    <th class="two wide" style="width: 10%">작성자</th>
+                    <th class="three wide" style="width: 15%">작성일</th>
                 </tr>
                 </thead>
 
                 <tbody>
                 <!-- CONTENTS !-->
                 <tr th:each="board : ${boardList}">
-<!--                    <td>-->
-<!--                        <span th:text="${board.id}"></span>-->
-<!--                    </td>-->
+                    <!--                    <td>-->
+                    <!--                        <span th:text="${board.id}"></span>-->
+                    <!--                    </td>-->
                     <td>
                         <a th:href="@{'/post/' + ${board.id}}">
                             <span th:text="${board.title}"></span>
