--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -17,17 +17,17 @@
     <form th:action="@{/user/add-save}" method="get">
         <div class="form-group">
             <label for="exampleInputId">아이디</label>
-            <input name="id" type="text" class="form-control" id="exampleInputId" placeholder="아이디를 입력하세요" maxlength="95">
+            <input name="id" type="text" class="form-control" id="exampleInputId" placeholder="아이디를 입력하세요" maxlength="12">
         </div>
         <br>
         <div class="form-group">
             <label for="exampleInputPassword">비밀번호</label>
-            <input name="password" type="password" class="form-control" id="exampleInputPassword" placeholder="비밀번호를 입력하세요">
+            <input name="password" type="password" class="form-control" id="exampleInputPassword" placeholder="비밀번호를 입력하세요" maxlength="200">
         </div>
         <br>
         <div class="form-group">
             <label for="exampleInputName">이름</label>
-            <input name="name" type="text" class="form-control" id="exampleInputName" placeholder="이름을 입력하세요">
+            <input name="name" type="text" class="form-control" id="exampleInputName" placeholder="이름을 입력하세요" maxlength="50">
         </div>
         <br>
 <!--        <div class="form-group">-->
