--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -14,7 +14,7 @@
     <br><br>
     <h2 style="text-align: center">회원가입</h2>
     <br>
-    <form th:action="@{/user/add-save}" method="get">
+    <form th:action="@{/user/add-save}" method="post" name="add">
         <div class="form-group">
             <label for="exampleInputId">아이디</label>
             <input name="id" type="text" class="form-control" id="exampleInputId" placeholder="아이디를 입력하세요" maxlength="12">
@@ -30,13 +30,6 @@
             <input name="name" type="text" class="form-control" id="exampleInputName" placeholder="이름을 입력하세요" maxlength="50">
         </div>
         <br>
-<!--        <div class="form-group">-->
-<!--            <label>등급</label>-->
-<!--            <select class="form-control" name="grade">-->
-<!--                <option value="1">일반사용자</option>-->
-<!--                <option value="9">최고관리자</option>-->
-<!--            </select>-->
-<!--        </div>-->
         <br><br>
         <button type="submit" style="border-radius: 5px; background-color: black; color: white; width: 100%; height: 40px">회원가입</button>
     </form>
